# grape-tracker

./: .env.example  .gitignore  .railwayignore  DATA-LOSS-INVESTIGATION.md  Dockerfile  PARTIAL-DATA-LOSS-ANALYSIS.md  README.md  RECOVERY-CHECKLIST.md  RECOVERY-PLAN.md  SYNC-FAILURE-PREVENTION.md  claude.md  docker-compose.yml  electric.yaml  entrypoint.sh  gilbert_backup.sql  index.html  investigate-partial-loss.sql  netlify.toml  nixpacks.toml  package-lock.json  package.json  recovery-queries.sql  rsbuild.config.ts  rstest.config.ts  rstest.d.ts  rstest.setup.ts  schema.cjs  schema.d.ts  schema.js  schema.ts  server.js  tsconfig.json  tsconfig.test.json
backend/: .env.example  Cargo.toml  README.md  build.rs  railway.toml
backend/.sqlx/: query-fba33ade589209129dea62806f53db03409deef8e35f1dae8c449769a1acf6c2.json
backend/migrations/: 20251110000001_initial_schema.sql  20251111000002_insert_default_vineyard.sql  20251111000003_insert_default_vineyard.sql  20251112000001_create_alert_settings.sql  20251113000001_create_winery_tables.sql  20251113000002_seed_winery_reference_data.sql  20251114000001_rename_columns_to_snake_case.sql  20251115000001_add_grape_source_to_vintage.sql  20251115000002_move_brix_to_measurements.sql  20251116000001_add_blend_components_to_wine.sql  20251118000001_add_user_id_columns.sql  20251126000001_create_user_table.sql  20251127000001_fix_task_template_fk.sql  20251129000001_add_training_pruning.sql  20251129000002_add_training_method_to_block.sql  20251129000003_add_pgvector_embeddings.sql  20251129000004_add_ai_context_fields.sql  (+10 more)
(+295 files in other folders)
